--- a/solutions.html
+++ b/solutions.html
@@ -12,6 +12,9 @@
     <!-- owl carousal -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+    <!-- animates css -->
+    <link rel="stylesheet" href="css/animate.css">
     <!-- custom style -->
     <link rel="stylesheet" href="css/style.css">
     <!-- responsive -->
@@ -52,10 +55,10 @@
     <section class="banner banner-solution bg-dark-green banner-2">
         <div class="container-inner">
             <div class="banner-content">
-                <h1 class="title text-white"><span>Solutions</span></h1>
-                <p class="text-white font-weight-bold">Taking on Challenges Facing The Entire Agribusiness Supply Chain
+                <h1 class="title text-white  wow animate__animated animate__fadeInUp"><span>Solutions</span></h1>
+                <p class="text-white font-weight-bold  wow animate__animated animate__fadeInUp animate__delay0-5s">Taking on Challenges Facing The Entire Agribusiness Supply Chain
                 </p>
-                <button class="btn btn-transparent" id="banner-enquiry">Book a Demo</button>
+                <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s" id="banner-enquiry">Book a Demo</button>
             </div>
         </div>
     </section>
@@ -64,7 +67,7 @@
             <div class="problem-inner mobile-hide">
                 <div class="row">
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box contain-title text-white">
+                        <div class="problem-box contain-title text-white   wow animate__animated animate__fadeInUp">
                             <h2 class="title text-left bottom font-weight-bold text-white"><span>Problems</span></h2>
                             <p>Critical commodity provenance and ownership data does not zmove easily or reliably from
                                 one participant to another in the supply chain.</p>
@@ -72,7 +75,7 @@
                     </div>
 
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box text-white">
+                        <div class="problem-box text-white   wow animate__animated animate__fadeInUp">
                             <img class="img-fluid" src="images/solutions/icon-5.png" alt="">
                             <h5 class="text-center">Limited Transparency</h5>
                             <div class="overlay text-white">
@@ -82,7 +85,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box text-white">
+                        <div class="problem-box text-white   wow animate__animated animate__fadeInUp ">
                             <img class="img-fluid" src="images/solutions/fake.png" alt="">
                             <h5 class="text-center">Inefficient inventory management systems</h5>
                             <div class="overlay text-white">
@@ -94,7 +97,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box text-white">
+                        <div class="problem-box text-white   wow animate__animated animate__fadeInUp">
                             <img class="img-fluid" src="images/solutions/icon-6.png" alt="">
                             <h5 class="text-center">20TH CENTURY LOGISTICS</h5>
                             <div class="overlay text-white">
@@ -107,7 +110,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box text-white">
+                        <div class="problem-box text-white   wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <img class="img-fluid" src="images/solutions/icon-1.png" alt="">
                             <h5 class="text-center">LACK OF TRUST</h5>
 
@@ -121,7 +124,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box">
+                        <div class="problem-box    wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <img class="img-fluid" src="images/solutions/icon-4.png" alt="">
                             <h5 class="text-center">DELAYED PAYMENTS</h5>
 
@@ -132,7 +135,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box">
+                        <div class="problem-box    wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <img class="img-fluid" src="images/solutions/icon-2.png" alt="">
                             <h5 class="text-center">DEPENDENDENCE ON LENDERS</h5>
 
@@ -144,7 +147,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <div class="problem-box">
+                        <div class="problem-box wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <img class="img-fluid" src="images/solutions/icon-7.png" alt="">
                             <h5 class="text-center">INTERNATIONAL TRANSACTION RISKS</h5>
 
@@ -159,10 +162,10 @@
                 </div>
             </div>
             <div class="problem-inner desktop-hide">
-                <h2 class="title text-left bottom font-weight-bold text-white"><span>Problems</span></h2>
-                <p>Critical commodity provenance and ownership data does not zmove easily or reliably from
+                <h2 class="title text-left bottom font-weight-bold text-white  wow animate__animated animate__fadeInUp"><span>Problems</span></h2>
+                <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">Critical commodity provenance and ownership data does not zmove easily or reliably from
                     one participant to another in the supply chain.</p>
-                <div class="row problem-list owl-carousel owl-theme no-gutters">
+                <div class="row problem-list owl-carousel owl-theme no-gutters ">
 
                     <div class="col-lg-3 col-md-4">
                         <div class="problem-box text-white">
@@ -259,11 +262,11 @@
 
     <section class="solutions-main">
         <div class="container-inner">
-            <h2 class="title bottom font-weight-bold text-left orange text-green"><span>Solutions</span></h2>
+            <h2 class="title bottom font-weight-bold text-left orange text-green  wow animate__animated animate__fadeInUp"><span>Solutions</span></h2>
             <div class="solutions-inner">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="solution-box">
+                        <div class="solution-box  wow animate__animated animate__fadeInUp">
                             <img class="img-fluid" src="images/solutions/produccer-img.png" alt="">
                             <div class="solution-box-text">
                                 <h6>For Producers</h6>
@@ -274,7 +277,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="solution-box">
+                        <div class="solution-box  wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <img class="img-fluid" src="images/solutions/storage-img.png" alt="">
                             <div class="solution-box-text">
                                 <h6>For Storage Operators</h6>
@@ -286,7 +289,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="solution-box">
+                        <div class="solution-box  wow animate__animated animate__fadeInUp animate__delay0-8s">
                             <img class="img-fluid" src="images/solutions/for-buyers.png" alt="">
                             <div class="solution-box-text">
                                 <h6>For Buyers</h6>
@@ -306,8 +309,8 @@
         <div class="container">
             <div class="how-does-it-works-content">
                 <div class="top">
-                    <h2 class="title text-left"><span>How does it work?</span></h2>
-                    <img class="img-fluid mt-5" src="images/work-flow.png " alt="">
+                    <h2 class="title text-left  wow animate__animated animate__fadeInUp "><span>How does it work?</span></h2>
+                    <img class="img-fluid mt-5  wow animate__animated animate__fadeInUp animate__delay0-5s" src="images/work-flow.png " alt="">
                 </div>
                 <div class="work-process">
                     <h2 class="title"><span>How Does it all Work Together</span></h2>
@@ -348,10 +351,10 @@
 
     <!-- product details -->
     <section class="product-details">
-        <h2 class="title orange font-weight-bold"><span>GrainChain’s suite of products work together to bring
+        <h2 class="title orange font-weight-bold  wow animate__animated animate__fadeInUp"><span>GrainChain’s suite of products work together to bring
                 efficiency, reliability and accountability to every stage of the agricultural supply chain.</span></h2>
         <div class="container-inner mt-5">
-            <div class="product-details-box">
+            <div class="product-details-box  wow animate__animated animate__fadeInUp ">
                 <div class="logo-holder">
                     <img src="images/trumodity-logo-2.png" alt="">
                 </div>
@@ -362,7 +365,7 @@
                     <img src="images/orange-arrow.png" alt="">
                 </div>
             </div>
-            <div class="product-details-box">
+            <div class="product-details-box  wow animate__animated animate__fadeInUp animate__delay0-5s">
                 <div class="logo-holder">
                     <img src="images/seed-audit-logo-2.png" alt="">
                 </div>
@@ -385,7 +388,7 @@
                     <img src="images/blue-arrow.png" alt="">
                 </div>
             </div>
-            <div class="product-details-box">
+            <div class="product-details-box  wow animate__animated animate__fadeInUp animate__delay0-8s">
                 <div class="logo-holder">
                     <img src="images/harvex-logo-2.png" alt="">
                 </div>
@@ -396,7 +399,7 @@
                     <img src="images/red-arrow.png" alt="">
                 </div>
             </div>
-            <div class="product-details-box">
+            <div class="product-details-box  wow animate__animated animate__fadeInUp animate__delay1-2s">
                 <div class="logo-holder">
                     <img src="images/block-chain-logo.png" alt="">
                 </div>
@@ -416,17 +419,17 @@
             <form action="">
                 <!-- form -->
                 <div class="form-wrapper">
-                    <div class="form-left">
-                        <h2 class="title"><span>Contact Us</span></h2>
-                        <div class="form-group">
+                    <div class="form-left ">
+                        <h2 class="title  wow animate__animated animate__fadeInUp"><span>Contact Us</span></h2>
+                        <div class="form-group  wow animate__animated animate__fadeInUp animate__delay0-5s">
                             <label for="">Name</label>
                             <input class="form-control" type="text" placeholder="Enter Your Name">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group  wow animate__animated animate__fadeInUp animate__delay0-8s">
                             <label for="">Email</label>
                             <input class="form-control" type="email" placeholder="Enter Your Email">
                         </div>
-                        <div class="form-group captcha mt-5">
+                        <div class="form-group captcha mt-5  wow animate__animated animate__fadeInUp animate__delay0-8s">
                             <img class="img-fluid" src="images/captcha.png" alt="">
                         </div>
                     </div>
@@ -535,16 +538,20 @@
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <!-- owl carousal -->
     <script src="js/owl.carousel.min.js"></script>
+    
+    <!-- wow js -->
+    <script src="js/wow.min.js"></script>
+    <!-- custom js -->
     <script src="js/main.js"></script>
 </body>
 
