--- a/products.html
+++ b/products.html
@@ -72,7 +72,7 @@
             </div>
         </div>
     </section>
-    <section class="banner-floating">
+    <section class="banner-floating animate__animated animate__fadeInUp animate__delay0-5s">
         <div class="container-inner">
             <img class="img-fluid" src="images/products/floating--images.png" alt="">
         </div>
@@ -83,22 +83,22 @@
         <div class="container-inner">
             <div class="row  align-items-center">
                 <div class="col-md-6">
-                    <img class="img-fluid desktop-hide" src="images/products/seed-mobile.png" alt="">
+                    <img class="img-fluid desktop-hide animate__animated animate__fadeInUp" src="images/products/seed-mobile.png" alt="">
                     <div class="left">
-                        <img class="logo-img img-fluid mb-5" src="images/products/seed-logo-png.png" alt="">
-                        <p><strong>Seed Audit</strong> brings the efficiency, transparency and reliability of our
+                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp" src="images/products/seed-logo-png.png" alt="">
+                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Seed Audit</strong> brings the efficiency, transparency and reliability of our
                             postharvest solutions to
                             the preharvest process. All data from seed to harvest (seed receipts, fertilizers, geofenced
                             crop maps, etc) is recorded and tracked securely through our solution, while also allowing
                             for
                             audits and certification.</p>
-                        <div class="action">
+                        <div class="action animate__animated animate__fadeInUp animate__delay0-8s">
                             <a href="#" class="btn bg-light-green text-white">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 ">
-                    <div class="right"> <img class="img-fluid display-img" src="images/products/mobile-product.png"
+                    <div class="right animate__animated animate__fadeInUp"> <img class="img-fluid display-img" src="images/products/mobile-product.png"
                             alt=""></div>
                 </div>
             </div>
@@ -113,15 +113,15 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <div class="left">
+                    <div class="left animate__animated animate__fadeInUp">
                         <img class="img-fluid desktop-hide" src="images/products/trumodity-mobile.png" alt="">
                         <img class="img-fluid  display-img" src="images/products/computer-product.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="right">
-                        <img class="logo-img img-fluid mb-5" src="images/products/trumodity-logo-png.png" alt="">
-                        <p><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
+                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp" src="images/products/trumodity-logo-png.png" alt="">
+                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
                             agricultural industry. Trumodity facilitates prompt payment to producers and suppliers and
                             the
                             immediate availability of tradable commodities to buyers. It attacks fraud and corruption
@@ -129,7 +129,7 @@
                             marketplace and its participants. Trumodity's innovative blockchain architecture creates a
                             secure, immutable record of commodity data and transactions along the entire supply chain.
                         </p>
-                        <div class="action">
+                        <div class="action animate__animated animate__fadeInUp animate__delay0-8s">
                             <a href="#" class="btn bg-yellow text-white">Learn More</a>
                         </div>
                     </div>
@@ -148,9 +148,9 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <img class="img-fluid desktop-hide" src="images/products/sylosiys-mobiel.png" alt="">
-                    <div class="left"><img class="logo-img img-fluid mb-5" src="images/products/silosys-logo-png.png"
+                    <div class="left animate__animated animate__fadeInUp"><img class="logo-img img-fluid mb-5" src="images/products/silosys-logo-png.png"
                             alt="">
-                        <p><strong>SiloSys</strong> is a cloud-based contract and inventory management system for
+                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>SiloSys</strong> is a cloud-based contract and inventory management system for
                             Producers and grain elevators. It digitizes and automates all business processes and
                             operations,
                             eliminating manual data input and providing reliable inventory and accounting records. The
@@ -158,13 +158,13 @@
                             entered
                             is accurate. All data is stored securely on the blockchain along with the records from
                             Trumodity.</p>
-                        <div class="action">
+                        <div class="action animate__animated animate__fadeInUp animate__delay0-8s">
                             <a href="#" class="btn bg-blue text-white">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="right">
+                    <div class="right animate__animated animate__fadeInUp ">
                         <img class="img-fluid  display-img" src="images/products/dashboard-procut.png" alt="">
                     </div>
                 </div>
@@ -180,14 +180,14 @@
         <div class="container-inner">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <div class="left">
+                    <div class="left  animate__animated animate__fadeInUp ">
                         <img class="img-fluid  display-img" src="images/products/multiple-mobile-product.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="right">
-                        <img class="logo-img img-fluid mb-5" src="images/products/harvx-logo-png.png" alt="">
-                        <p><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
+                        <img class="logo-img img-fluid mb-5  animate__animated animate__fadeInUp" src="images/products/harvx-logo-png.png" alt="">
+                        <p class=" animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
                             agricultural industry. Trumodity facilitates prompt payment to producers and suppliers and
                             the
                             immediate availability of tradable commodities to buyers. It attacks fraud and corruption
@@ -195,7 +195,7 @@
                             marketplace and its participants. Trumodity's innovative blockchain architecture creates a
                             secure, immutable record of commodity data and transactions along the entire supply chain.
                         </p>
-                        <div class="action">
+                        <div class="action  animate__animated animate__fadeInUp animate__delay0-8s">
                             <a href="#" class="btn bg-red text-white">Learn More</a>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
 
             </div>
         </div>
-        <a class="bottom-cta-btn btn bg-green text-white"><span>Learn more about how GrainChain’s innovative suite of products works together to solve the problems facing the agribusiness supply chain.</span> <img src="images/buyers/arrow-product.png" alt=""></a>
+        <a class="bottom-cta-btn btn bg-green text-white  animate__animated animate__fadeInUp animate__delay-2s"><span>Learn more about how GrainChain’s innovative suite of products works together to solve the problems facing the agribusiness supply chain.</span> <img src="images/buyers/arrow-product.png" alt=""></a>
     </section>
     <img class="desktop-hide img-fluid" src="images/products/bg-pattern-3.png" alt="">
 
