--- a/buyers.html
+++ b/buyers.html
@@ -518,7 +518,7 @@
                                     <li><a href="#">For producers</a></li>
                                     <li><a href="#">For Storage Operators</a></li>
                                     <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain</a></li>
+                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
@@ -555,7 +555,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Services</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
