--- a/products.html
+++ b/products.html
@@ -61,11 +61,10 @@
     <section class="banner banner-2 banner-products bg-transparent">
         <div class="container-inner">
             <div class="banner-content">
-                <h1 class="title text-white  wow animate__animated animate__fadeInUp"><span>For Storage Operators</span>
+                <h1 class="title text-white bottom bottom-center  wow animate__animated animate__fadeInUp"><span>Our Products</span>
                 </h1>
-                <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">
-                    Helping Grain Elevators, Producers and Drivers Work Together in a Better, Faster, and More Secure
-                    Way
+                <p class="text-white wow animate__animated animate__fadeInUp animate__delay0-5s">Technology Driven
+                    Solutions to the Biggest Challenges Facing the Global Agricultural Supply-Chain.
                 </p>
                 <button class="btn btn-transparent   wow animate__animated animate__fadeInUp animate__delay-1s"
                     id="banner-enquiry">Book a Demo</button>
@@ -83,10 +82,13 @@
         <div class="container-inner">
             <div class="row  align-items-center">
                 <div class="col-md-6">
-                    <img class="img-fluid desktop-hide animate__animated animate__fadeInUp" src="images/products/seed-mobile.png" alt="">
+                    <img class="img-fluid desktop-hide animate__animated animate__fadeInUp"
+                        src="images/products/seed-mobile.png" alt="">
                     <div class="left">
-                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp" src="images/products/seed-logo-png.png" alt="">
-                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Seed Audit</strong> brings the efficiency, transparency and reliability of our
+                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp"
+                            src="images/products/seed-logo-png.png" alt="">
+                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Seed Audit</strong>
+                            brings the efficiency, transparency and reliability of our
                             postharvest solutions to
                             the preharvest process. All data from seed to harvest (seed receipts, fertilizers, geofenced
                             crop maps, etc) is recorded and tracked securely through our solution, while also allowing
@@ -98,8 +100,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 ">
-                    <div class="right animate__animated animate__fadeInUp"> <img class="img-fluid display-img" src="images/products/mobile-product.png"
-                            alt=""></div>
+                    <div class="right animate__animated animate__fadeInUp"> <img class="img-fluid display-img"
+                            src="images/products/mobile-product.png" alt=""></div>
                 </div>
             </div>
         </div>
@@ -120,8 +122,10 @@
                 </div>
                 <div class="col-md-6">
                     <div class="right">
-                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp" src="images/products/trumodity-logo-png.png" alt="">
-                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
+                        <img class="logo-img img-fluid mb-5 animate__animated animate__fadeInUp"
+                            src="images/products/trumodity-logo-png.png" alt="">
+                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong> is
+                            GrainChain's comprehensive transaction platform for the
                             agricultural industry. Trumodity facilitates prompt payment to producers and suppliers and
                             the
                             immediate availability of tradable commodities to buyers. It attacks fraud and corruption
@@ -148,9 +152,10 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <img class="img-fluid desktop-hide" src="images/products/sylosiys-mobiel.png" alt="">
-                    <div class="left animate__animated animate__fadeInUp"><img class="logo-img img-fluid mb-5" src="images/products/silosys-logo-png.png"
-                            alt="">
-                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>SiloSys</strong> is a cloud-based contract and inventory management system for
+                    <div class="left animate__animated animate__fadeInUp"><img class="logo-img img-fluid mb-5"
+                            src="images/products/silosys-logo-png.png" alt="">
+                        <p class="animate__animated animate__fadeInUp animate__delay0-5s"><strong>SiloSys</strong> is a
+                            cloud-based contract and inventory management system for
                             Producers and grain elevators. It digitizes and automates all business processes and
                             operations,
                             eliminating manual data input and providing reliable inventory and accounting records. The
@@ -174,26 +179,23 @@
     <!-- sylosys -->
 
     <!-- harvx -->
-<img class="desktop-hide img-fluid" src="images/products/bg-pattern-4.png" alt="">
+    <img class="desktop-hide img-fluid" src="images/products/bg-pattern-4.png" alt="">
 
     <section class="main-product-info product-harvx">
         <div class="container-inner">
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <div class="left  animate__animated animate__fadeInUp ">
+                        <img class="img-fluid desktop-hide" src="images/products/harvex-mobile.png" alt="">
                         <img class="img-fluid  display-img" src="images/products/multiple-mobile-product.png" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="right">
-                        <img class="logo-img img-fluid mb-5  animate__animated animate__fadeInUp" src="images/products/harvx-logo-png.png" alt="">
-                        <p class=" animate__animated animate__fadeInUp animate__delay0-5s"><strong>Trumodity</strong> is GrainChain's comprehensive transaction platform for the
-                            agricultural industry. Trumodity facilitates prompt payment to producers and suppliers and
-                            the
-                            immediate availability of tradable commodities to buyers. It attacks fraud and corruption
-                            through certification and accountability while streamlining procedures that burden the
-                            marketplace and its participants. Trumodity's innovative blockchain architecture creates a
-                            secure, immutable record of commodity data and transactions along the entire supply chain.
+                        <img class="logo-img img-fluid mb-5  animate__animated animate__fadeInUp"
+                            src="images/products/harvx-logo-png.png" alt="">
+                        <p class=" animate__animated animate__fadeInUp animate__delay0-5s"><strong>HarvX</strong>
+                             makes logistics easy by connecting drivers and producers directly. Producers can schedule pickup and delivery when they need it, as well as guide drivers through their farms directly to the harvest location. Drivers can accept jobs, schedule future jobs and receive payments all from their mobile app. Facilities like grain elevators and silos can also track and manage drop offs easily through the mobile app. HarvX adds yet another layer of security, efficiency and accountability to the GrainChain suite of products.
                         </p>
                         <div class="action  animate__animated animate__fadeInUp animate__delay0-8s">
                             <a href="#" class="btn bg-red text-white">Learn More</a>
@@ -203,7 +205,9 @@
 
             </div>
         </div>
-        <a class="bottom-cta-btn btn bg-green text-white  animate__animated animate__fadeInUp animate__delay-2s"><span>Learn more about how GrainChain’s innovative suite of products works together to solve the problems facing the agribusiness supply chain.</span> <img src="images/buyers/arrow-product.png" alt=""></a>
+        <a class="bottom-cta-btn btn bg-green text-white  animate__animated animate__fadeInUp animate__delay-2s"><span>Learn
+                more about how GrainChain’s innovative suite of products works together to solve the problems facing the
+                agribusiness supply chain.</span> <img src="images/buyers/arrow-product.png" alt=""></a>
     </section>
     <img class="desktop-hide img-fluid" src="images/products/bg-pattern-3.png" alt="">
 
@@ -290,7 +294,7 @@
                                     <li><a href="#">For producers</a></li>
                                     <li><a href="#">For Storage Operators</a></li>
                                     <li><a href="#">For Buyers</a></li>
-                                    <li><a href="#">Blockchain</a></li>
+                                    <li><a href="#">Blockchain and Smart Contracts</a></li>
                                 </ul>
                             </div>
 
@@ -327,7 +331,7 @@
 
             <!-- copyright -->
             <div class="copyright">
-                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Services</a></p>
+                <p>@2020 Copyright, GrainChain - <a href="#">Privacy Policy</a> - <a href="#">Terms of Service</a></p>
             </div>
             <!-- copyright -->
         </div>
