--- a/trumodity.html
+++ b/trumodity.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="col-md-7">
                     <h2
-                            class="title orange bottom text-left font-weight-bold   wow animate__animated animate__fadeInUp">
+                            class="title orange bottom text-left font-weight-bold desktop-hide wow animate__animated animate__fadeInUp">
                             <span>Mobile App Features</span></h2>
                     <ul class="app-img-list owl-carousel owl-theme">
                         <li><img class="img-fluid" src="images/trumodity/mobile-img.png" alt="">
