--- a/solutions.html
+++ b/solutions.html
@@ -71,8 +71,7 @@
                     <div class="col-lg-3 col-md-4">
                         <div class="problem-box contain-title text-white   wow animate__animated animate__fadeInUp">
                             <h2 class="title text-left bottom font-weight-bold text-white"><span>Problems</span></h2>
-                            <p>Critical commodity provenance and ownership data does not zmove easily or reliably from
-                                one participant to another in the supply chain.</p>
+                            <p>GrainChain’s suite of products solve some of the most pressing challenges for farmers, storage operators, buyers and the rest of the agribusiness supply chain: </p>
                         </div>
                     </div>
 
@@ -167,9 +166,7 @@
             <div class="problem-inner desktop-hide">
                 <h2 class="title text-left bottom font-weight-bold text-white  wow animate__animated animate__fadeInUp">
                     <span>Problems</span></h2>
-                <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">Critical commodity provenance and
-                    ownership data does not zmove easily or reliably from
-                    one participant to another in the supply chain.</p>
+                <p class=" wow animate__animated animate__fadeInUp animate__delay0-5s">GrainChain’s suite of products solve some of the most pressing challenges for farmers, storage operators, buyers and the rest of the agribusiness supply chain: </p>
                 <div class="row problem-list owl-carousel owl-theme no-gutters ">
 
                     <div class="col-lg-3 col-md-4">
